Align ingestion sensitive data access
