# openapi/bunkfy-api.json
@@ -7309,10 +7309,6 @@
           "errorCode": {
             "type": "string",
             "nullable": true
-          },
-          "errorMessage": {
-            "type": "string",
-            "nullable": true
           }
         },
         "additionalProperties": false
